# ClawCode

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  langgraph.json  main.py  pyproject.toml  railway.toml
.claude/: CLAUDE.md  README.md  rules.md
.github/workflows/: ci.yml  notify.yml
.langgraph_api/: .langgraph_ops.pckl
agent/: checkpoints.py  exceptions.py  llm.py  memory.py  orchestrator.py  state.py  tools.py  wiring.py
bot/: approval.py  commands.py  handler.py  keyboards.py  voice.py
config/: settings.py
docs/: build-plan.md  current-phase.md  improvements.md  project-structure.md
gh/: exceptions.py  pr_manager.py  repo_manager.py
memory/: exceptions.py  store.py
sandbox/: e2b_runner.py  exceptions.py
tests/: test_agent_memory.py  test_approval.py  test_bot.py  test_checkpoints.py  test_e2b_runner.py  test_llm.py  test_memory_store.py  test_orchestrator.py  test_pr_manager.py  test_repo_manager.py  test_settings.py  test_state.py  test_tools.py  test_voice.py  test_wiring.py
