[project]
name = "clawcode"
version = "0.1.0"
description = "Telegram-controlled autonomous coding agent."
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "python-telegram-bot[webhooks]==21.6",
    "PyGithub>=2.3",
    "GitPython>=3.1.43",
    "e2b-code-interpreter>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pydantic>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.6",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
